# ds-homework

./: README.md  pyproject.toml
src/fundamentos_stadistica/s2/: Datos.csv  Datos.xlsx  analisiis_de_caso.ipynb  analisis_de_caso.ipynb
